# Vigil

./: .gitignore  .gitmodules  README.md  index.html  package-lock.json  package.json  tsconfig.app.tsbuildinfo  vite.config.ts
.github/workflows/: build.yml  release.yml
electron/: browser-imports.ts  build-firefox-decrypt.mjs  build.mjs  copy-native-modules.mjs  get-keytar.ts  main.ts  preload.ts
electron/src/: biometrics.ts  crypto.ts  file-operations.ts  get-keytar.ts  hibp.ts  ipc.ts  utils.ts  window.ts
native/windows_hello/: CMakeLists.txt  binding.gyp  binding.js  windows_hello.cpp  windows_hello.h
scripts/: svgtoicns.sh  svgtoico.ps1  svgtopng.sh
src/: App.css  App.tsx  index.css  index.tsx
src/components/: Background.css  Background.tsx  TitleBar.css  TitleBar.tsx
src/components/Authentication/: AuthenticationView.css  AuthenticationView.tsx  DatabaseForm.tsx  PasswordForm.tsx
src/components/PasswordView/: BreachReport.css  BreachReport.tsx  EntryDetails.css  EntryDetails.tsx  EntryList.tsx  PasswordGenerator.css  PasswordGenerator.tsx  PasswordView.css  Sidebar.tsx  index.tsx
src/components/Settings/: Settings.css  Settings.tsx
src/components/Toast/: Toast.css  (+1 more)
src/contexts/: ThemeContext.tsx
src/icons/: LogoIcon.tsx  SettingsIcon.tsx  index.ts
src/services/: BreachCheckService.ts  BreachStatusStore.ts  CsvImportService.ts  DatabasePathService.ts  EmailBreachStatusStore.ts  HaveIBeenPwnedService.ts  KeepassDatabaseService.ts  UserSettingsService.ts
src/types/: argon2.d.ts  database.ts  electron.d.ts
src/utils/: databaseUtils.ts
(+7 files in other folders)
